test/errors/segment4.input.asm

* = $801

!segment code(start="string", end=1024)          ; string not allowed for start
!segment data(start=$2000, end="another string") ; string not allowed for end
